hphp/hack/test/typecheck/generic_primitive_option_return.php
<?hh

function f<T as int>(T $x): ?int {
  return $x;
}
